@@ -1,8 +1,0 @@
-# config used by pg_regress --temp-config
-
-fsync = off
-
-# force JITing of all queries in tests
-jit = on
-jit_above_cost = 0
-jit_optimize_above_cost = 1000
