@@ -1,6 +1,7 @@
 postgresql-14 (14.1-3) UNRELEASED; urgency=medium
 
   * Use system default clang/llvm version. (Closes: #1000915)
+  * Use centralized debian/rules logic in postgresql-common.
 
  -- Christoph Berg <myon@debian.org>  Wed, 01 Dec 2021 13:34:04 +0100
 
